# polyhedrator

./: .hgignore  Cargo.toml  README.md
res/shader/: shader.frag
src/: lib.rs  main.rs  polyhedrator.rs  viewer.rs
src/polyhedrator/: builder.rs  keys.rs  notation.pest  operators.rs  seeds.rs
src/polyhedrator/seeds/: platonic.rs
src/viewer/: controls.rs  generator.rs  render.rs
src/viewer/render/: camera.rs  mesh.rs  shader.rs  texture.rs  uniforms.rs  update.rs
src/viewer/res/shader/: shader.vert
