[package]
name = "polyhedrator"
version = "0.1.0"
authors = ["Michael Johnson <michael@ociaw.com>"]
edition = "2018"

[lib]
name = "polyhedrator"
path = "src/lib.rs"

[[bin]]
name = "polyhedrator-viewer"
path = "src/main.rs"

[dependencies]
cgmath = "0.17.0"
image = "0.23"
winit = "0.22"
glsl-to-spirv = "0.1" # Deprecated, but doesn't require tons of setup like shaderc
fnv = "1.0.3"
wgpu = "0.4"
# We'll switch to the next released version instead of pointing directly to git
iced_wgpu = { path = '../iced/wgpu' }
iced_winit = { path = '../iced/winit' }

[profile.release]
debug = true
