[package]
name = "polyhedrator"
version = "0.1.0"
authors = ["Michael Johnson <michael@ociaw.com>"]
edition = "2018"

[lib]
name = "polyhedrator"
path = "src/lib.rs"

[[bin]]
name = "polyhedrator-viewer"
path = "src/main.rs"

[dependencies]
cgmath = "0.17.0"
pest = "2.1.3"
pest_derive = "2.1.0"
image = "0.23"
winit = "0.22"
glsl-to-spirv = "0.1" # Deprecated, but doesn't require tons of setup like shaderc
fnv = "1.0.3"
wgpu = "0.4"
iced_wgpu = "0.2.0"
iced_winit = "0.1.0"

[profile.release]
debug = true
